--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,17 @@
   </head>
 
   <body>
+    <header>
+      <ul>
+      <% if user_signed_in? %>
+        <li><%= link_to "ログアウト", destroy_user_session_path,method: :delete %></li>
+      <% else %>
+        <li><%= link_to "新規登録", new_user_registration_path %></li>
+        <li><%= link_to "ログイン", new_user_session_oath %></li>
+      <% end %>
+      </ul>
+    </header>
+
     <%= yield %>
   </body>
 </html>
